--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,6 +44,7 @@
     <p class="theme-by text-muted">
       Theme by
       <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+      Photo from Gapvoiding
     </p>
       </div>
     </div>
