--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,8 @@
     <p class="theme-by text-muted">
       Theme by
       <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
-      Photo from Gapvoiding
+      Photo from
+      <a href="https://www.gapingvoid.com/">gapingvoid</a>
     </p>
       </div>
     </div>
