--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,3 +23,5 @@ layout: base
     </div>
   </div>
 </div>
+
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=38lYuUoTLpX4eNylrbExae1xeSa4gCLfApK1GzxSuHk"></script>
